old_src/ombi-ingress-svc-endp.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: ombi-svc
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: default
  name: ombi-svc
subsets:
  - addresses:
    - ip: 192.168.0.54
    ports:
    - port: 5000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-ombi
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx

spec:
  tls:
    - hosts:
        - ombi.humpingdog.lan
      secretName: ombi-tls
  rules:
    - host: ombi.humpingdog.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi-svc
                port:
                  number: 5000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: external-ombi-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - www.busybeagleplex.com
        - ombi.busybeagleplex.com
      secretName: external-ombi-tls
  rules:
    - host: www.busybeagleplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi-svc
                port:
                  number: 5000
    - host: ombi.busybeagleplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ombi-svc
                port:
                  number: 5000
