old_src/plex-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-plex
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx

spec:
  tls:
    - hosts:
        - plex.humpingdog.lan #change this!
      secretName: plex-tls
  rules:
    - host: plex.humpingdog.lan #Change this!
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-svc
                port:
                  number: 32400
