old_src/radarr-ingress-svc-endp.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: radarr-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: default
  name: radarr-svc
subsets:
  - addresses:
    - ip: 192.168.0.54
    ports:
    - port: 7878
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-radarr
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx

spec:
  tls:
    - hosts:
        - radarr.humpingdog.lan
      secretName: radarr-tls
  rules:
    - host: radarr.humpingdog.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-svc
                port:
                  number: 7878
